--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   gtag('config', 'G-9WVCM03XJZ');
 </script>
+<script src="https://accounts.google.com/gsi/client" async defer></script>
 <body>
 	<h1>index</h1>
 	<h2>index</h2>
