--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-9WVCM03XJZ');
 </script>
 <script src="https://accounts.google.com/gsi/client" async defer></script>
 <body>
 	<h1>index</h1>
-	<h2>index</h2>
+	<h2>indeks</h2>
 	
 	<div id="g_id_onload"
 	     data-client_id="1094471746392-qcslfh7n4dk2jsd4eiagv8n9sq7o86do.apps.googleusercontent.com"
