--- a/index.html
+++ b/index.html
@@ -37,18 +37,7 @@
 
 <script>
   function onSignIn(authResult) {
-  if (authResult['status']['signed_in'] && authResult['status']['method'] == 'PROMPT') {
-      console.log('User clicked on the sign in button. Do your staff here.');
-  } else if (authResult['status']['signed_in']) {
-      // This is called when user is signed in to Google but hasn't clicked on the button.
-      console.log('This is called when user is signed in to Google but hasnt clicked on the button');
-  } else {
-      console.log('Update the app to reflect a signed out user');
-	  // Possible error values:
-      // "user_signed_out" - User is signed-out
-      // "access_denied" - User denied access to your app
-      // "immediate_failed" - Could not automatically log in the user
-      console.log('Sign-in state: ' + authResult['error']);
+      console.log(authResult);
   }
 </script>
 </body>
